--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,17 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {{!-- Bootstrap CSS --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 
+    {{!-- Custom CSS link --}}
     <link rel="stylesheet" href="assets/css/burger_style.css" type="text/css">
 
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/burger.js"></script>
+    {{!-- Google Font --}}
+    <link href="https://fonts.googleapis.com/css?family=Vibur|Wendy+One|Shadows+Into+Light" rel="stylesheet">
 
+
+    {{!-- Font Awesome --}}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
+
+    {{!-- jQuery --}}
+    <script src="https://code.jquery.com/jquery.js"></script>
+    {{!-- Javascript --}}
+    <script src="/assets/js/app.js"></script>
+
+    {{!-- -------------------------------------------------------------------------------- --}}
     <title>Eat-Da-Burger</title>
+
 </head>
 
 <body>
     {{{ body }}}
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
